--- a/src/notebook/Model_Training.ipynb
+++ b/src/notebook/Model_Training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "4                    none             78             75  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        " 'test preparation course']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "         1.15336989,  1.18158627]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
        "((800, 19), (200, 19))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
       "-------------------------------\n",
       "Training Decision Tree...\n",
       "Fitting 3 folds for each of 30 candidates, totalling 90 fits\n",
-      "Best params for Decision Tree: {'min_samples_split': 2, 'max_depth': 5, 'criterion': 'friedman_mse'}\n",
+      "Best params for Decision Tree: {'min_samples_split': 2, 'max_depth': 5, 'criterion': 'squared_error'}\n",
       "\n",
       "Model performance for training set\n",
       "Root Mean Squared Error: 32.6874\n",
@@ -529,21 +529,21 @@
       "-------------------------------\n",
       "Training Random Forest Regressor...\n",
       "Fitting 3 folds for each of 30 candidates, totalling 90 fits\n",
-      "Best params for Random Forest Regressor: {'n_estimators': 50, 'min_samples_split': 10, 'max_depth': 20}\n",
+      "Best params for Random Forest Regressor: {'n_estimators': 50, 'min_samples_split': 10, 'max_depth': None}\n",
       "\n",
       "Model performance for training set\n",
-      "Root Mean Squared Error: 15.7386\n",
-      "Mean Absolute Error: 3.2134\n",
-      "Mean Squared Error: 0.9302\n",
-      "R² score: 3.9672\n",
+      "Root Mean Squared Error: 15.9643\n",
+      "Mean Absolute Error: 3.2193\n",
+      "Mean Squared Error: 0.9292\n",
+      "R² score: 3.9955\n",
       "\n",
       "-------------------------------\n",
       "\n",
       "Model performance for test set\n",
-      "Root Mean Squared Error: 36.0360\n",
-      "Mean Absolute Error: 4.6244\n",
-      "Mean Squared Error: 0.8519\n",
-      "R² score: 6.0030\n",
+      "Root Mean Squared Error: 35.6926\n",
+      "Mean Absolute Error: 4.5032\n",
+      "Mean Squared Error: 0.8533\n",
+      "R² score: 5.9743\n",
       "\n",
       "-------------------------------\n",
       "Training XGBRegressor...\n",
@@ -584,23 +584,23 @@
       "Best params for AdaBoost Regressor: {'n_estimators': 300, 'learning_rate': 0.2}\n",
       "\n",
       "Model performance for training set\n",
-      "Root Mean Squared Error: 34.3068\n",
-      "Mean Absolute Error: 4.7926\n",
-      "Mean Squared Error: 0.8478\n",
-      "R² score: 5.8572\n",
+      "Root Mean Squared Error: 33.8402\n",
+      "Mean Absolute Error: 4.7794\n",
+      "Mean Squared Error: 0.8499\n",
+      "R² score: 5.8172\n",
       "\n",
       "-------------------------------\n",
       "\n",
       "Model performance for test set\n",
-      "Root Mean Squared Error: 36.3716\n",
-      "Mean Absolute Error: 4.7001\n",
-      "Mean Squared Error: 0.8505\n",
-      "R² score: 6.0309\n",
+      "Root Mean Squared Error: 37.3317\n",
+      "Mean Absolute Error: 4.7594\n",
+      "Mean Squared Error: 0.8466\n",
+      "R² score: 6.1100\n",
       "\n",
       "-------------------------------\n",
       "Model List: ['Linear Regression', 'Lasso', 'Ridge', 'K-Neighbors Regressor', 'Decision Tree', 'Random Forest Regressor', 'XGBRegressor', 'AdaBoost Regressor']\n",
-      "R² Scores on Test Set: [5.3959872842671395, 6.519694535667419, 5.390387016935642, 7.174621251872615, 6.540000789493743, 6.003000066153999, 5.661136062500646, 6.030888653619572]\n",
-      "R² Scores on Training Set: [5.32433481852575, 6.593815587795566, 5.323324922741654, 0.27950849718831944, 5.71728864854146, 3.9671886335717113, 4.726288659884577, 5.857204465632919]\n"
+      "R² Scores on Test Set: [5.3959872842671395, 6.519694535667419, 5.390387016935642, 7.174621251872615, 6.540000789493743, 5.974329111252898, 5.661136062500646, 6.109969709339736]\n",
+      "R² Scores on Training Set: [5.32433481852575, 6.593815587795566, 5.323324922741654, 0.27950849718831944, 5.71728864854146, 3.9955396740070452, 4.726288659884577, 5.817232025889578]\n"
      ]
     }
    ],
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -777,9 +777,9 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Random Forest Regressor</td>\n",
-       "      <td>3.967189</td>\n",
-       "      <td>6.003000</td>\n",
-       "      <td>2.035811</td>\n",
+       "      <td>3.995540</td>\n",
+       "      <td>5.974329</td>\n",
+       "      <td>1.978789</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -791,9 +791,9 @@
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>AdaBoost Regressor</td>\n",
-       "      <td>5.857204</td>\n",
-       "      <td>6.030889</td>\n",
-       "      <td>0.173684</td>\n",
+       "      <td>5.817232</td>\n",
+       "      <td>6.109970</td>\n",
+       "      <td>0.292738</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -806,12 +806,12 @@
        "2                    Ridge        5.323325       5.390387    0.067062\n",
        "3    K-Neighbors Regressor        0.279508       7.174621    6.895113\n",
        "4            Decision Tree        5.717289       6.540001    0.822712\n",
-       "5  Random Forest Regressor        3.967189       6.003000    2.035811\n",
+       "5  Random Forest Regressor        3.995540       5.974329    1.978789\n",
        "6             XGBRegressor        4.726289       5.661136    0.934847\n",
-       "7       AdaBoost Regressor        5.857204       6.030889    0.173684"
+       "7       AdaBoost Regressor        5.817232       6.109970    0.292738"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +900,7 @@
        "<Axes: xlabel='math score'>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
